# blog3AI

./: .dockerignore  .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  firebase.json  firestore.rules
.claude/commands/: commit.md
.claude/skills/commit/: SKILL.md
.cursor/rules/: git-commits.mdc
src/backend/: Dockerfile  firestore_store.py  main.py  pyproject.toml  schemas.py  scrape_blogs.py
src/backend/config/: sources.yaml
src/backend/prompts/: anthropic.txt  anthropic_news.txt  deepmind.txt  openai.txt
src/frontend/: .env.example  package-lock.json  package.json  vite.config.ts
src/frontend/src/: app.css
src/frontend/src/lib/: blogs.ts  firebase.ts  labs.ts  logos.ts  types.ts
src/frontend/src/lib/components/: EntryRow.svelte  LabFilter.svelte  Masthead.svelte  MonthDivider.svelte
src/frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
